--- a/ex_02_plot_time_series.ipynb
+++ b/ex_02_plot_time_series.ipynb
@@ -2,9 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-24T12:05:58.305579Z",
+     "start_time": "2025-05-24T12:05:57.207256Z"
+    }
+   },
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -19,17 +22,24 @@
     "from utils import save_plotly_figure_as_html\n",
     "from ex_01_read_data import get_welding_data\n",
     "\n"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-24T12:05:58.322203Z",
+     "start_time": "2025-05-24T12:05:58.319171Z"
+    }
+   },
    "source": [
     "data_path = Path(\"data/Welding/data.csv\")\n",
     "plot_path = Path(\"plots/ex_02\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -48,21 +58,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-24T12:05:59.187731Z",
+     "start_time": "2025-05-24T12:05:58.498542Z"
+    }
+   },
    "source": [
     "data, labels, exp_ids = get_welding_data(data_path)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-24T12:06:01.772666Z",
+     "start_time": "2025-05-24T12:05:59.214829Z"
+    }
+   },
    "source": [
+    "# Klassenverteilung\n",
+    "class_counts = pd.Series(labels).value_counts().sort_index()\n",
+    "print(\"Class distribution:\\n\", class_counts)\n",
+    "\n",
+    "# Pro Experiment\n",
+    "experiment_counts = pd.Series(exp_ids).value_counts().sort_index()\n",
+    "print(\"\\nSamples per experiment:\\n\", experiment_counts)\n",
+    "\n",
+    "# Annahme: features = (n_samples, n_features)\n",
+    "# Extrahiere Spannung (V) und Strom (I) - hier beispielhaft für alternierende V/I-Spalten\n",
+    "voltage_cols = np.arange(0, data.shape[1], 2)\n",
+    "current_cols = np.arange(1, data.shape[1], 2)\n",
+    "\n",
+    "voltages = data[:, voltage_cols]\n",
+    "currents = data[:, current_cols]\n",
+    "\n",
+    "# Statistiken\n",
+    "print(\"\\nVoltage statistics:\")\n",
+    "print(f\"Min: {voltages.min():.2f}, Max: {voltages.max():.2f}\")\n",
+    "print(f\"Mean: {voltages.mean():.2f}, Std: {voltages.std():.2f}, Median: {np.median(voltages):.2f}\")\n",
+    "\n",
+    "print(\"\\nCurrent statistics:\")\n",
+    "print(f\"Min: {currents.min():.2f}, Max: {currents.max():.2f}\")\n",
+    "print(f\"Mean: {currents.mean():.2f}, Std: {currents.std():.2f}, Median: {np.median(currents):.2f}\")\n",
     "\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class distribution:\n",
+      " 0    90746\n",
+      "1    67219\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Samples per experiment:\n",
+      " 1    35521\n",
+      "2    17913\n",
+      "3    46768\n",
+      "4    57763\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Voltage statistics:\n",
+      "Min: -1.17, Max: 614.15\n",
+      "Mean: 97.75, Std: 148.67, Median: 30.08\n",
+      "\n",
+      "Current statistics:\n",
+      "Min: -1.18, Max: 613.79\n",
+      "Mean: 97.74, Std: 148.67, Median: 30.08\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -80,21 +150,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-24T12:06:02.180222Z",
+     "start_time": "2025-05-24T12:06:01.862273Z"
+    }
+   },
    "source": [
     "data, labels, exp_ids = get_welding_data(data_path, n_samples=10_000)\n",
     "\n",
     "save_path =  plot_path / \"voltage_current_distribution\""
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-24T12:06:02.212832Z",
+     "start_time": "2025-05-24T12:06:02.211130Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -111,21 +191,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-24T12:06:02.429041Z",
+     "start_time": "2025-05-24T12:06:02.285969Z"
+    }
+   },
    "source": [
     "\n",
     "data, labels, exp_ids = get_welding_data(data_path, n_samples=100, return_sequences=True, sequence_length=10)\n",
     "save_path = plot_path / \"welding_sample.png\"    "
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 6
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-24T12:06:02.445666Z",
+     "start_time": "2025-05-24T12:06:02.444035Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -144,9 +234,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-24T12:06:02.847837Z",
+     "start_time": "2025-05-24T12:06:02.499029Z"
+    }
+   },
    "source": [
     "def create_plotly_plot(data: np.ndarray, labels: np.ndarray, exp_ids: np.ndarray = None) -> go.Figure:\n",
     "    \"\"\"\n",
@@ -166,7 +259,22 @@
     "fig = create_plotly_plot(data, labels, exp_ids)\n",
     "save_plotly_figure_as_html(fig, plot_path / \"welding_samples\")\n",
     "fig.show()"
-   ]
+   ],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'write_html'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[7], line 17\u001B[0m\n\u001B[1;32m     13\u001B[0m     \u001B[38;5;28;01mpass\u001B[39;00m\n\u001B[1;32m     16\u001B[0m fig \u001B[38;5;241m=\u001B[39m create_plotly_plot(data, labels, exp_ids)\n\u001B[0;32m---> 17\u001B[0m \u001B[43msave_plotly_figure_as_html\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfig\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mplot_path\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m/\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mwelding_samples\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m     18\u001B[0m fig\u001B[38;5;241m.\u001B[39mshow()\n",
+      "File \u001B[0;32m~/Uni/Informatik/AML (Applied Machine Learning)/Code/utils.py:24\u001B[0m, in \u001B[0;36msave_plotly_figure_as_html\u001B[0;34m(fig, filename_path)\u001B[0m\n\u001B[1;32m     21\u001B[0m     filename_path \u001B[38;5;241m=\u001B[39m filename_path\u001B[38;5;241m.\u001B[39mwith_suffix(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m.html\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m     23\u001B[0m \u001B[38;5;66;03m# Save the figure\u001B[39;00m\n\u001B[0;32m---> 24\u001B[0m \u001B[43mfig\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mwrite_html\u001B[49m(filename_path)\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'NoneType' object has no attribute 'write_html'"
+     ]
+    }
+   ],
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
