--- a/ex_02_plot_time_series.ipynb
+++ b/ex_02_plot_time_series.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-24T12:05:58.305579Z",
-     "start_time": "2025-05-24T12:05:57.207256Z"
+     "end_time": "2025-05-24T12:36:31.068148Z",
+     "start_time": "2025-05-24T12:36:31.060442Z"
     }
    },
    "source": [
@@ -24,14 +24,14 @@
     "\n"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 36
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-24T12:05:58.322203Z",
-     "start_time": "2025-05-24T12:05:58.319171Z"
+     "end_time": "2025-05-24T12:36:31.108276Z",
+     "start_time": "2025-05-24T12:36:31.100398Z"
     }
    },
    "source": [
@@ -39,7 +39,7 @@
     "plot_path = Path(\"plots/ex_02\")"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 37
   },
   {
    "cell_type": "markdown",
@@ -60,35 +60,34 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-24T12:05:59.187731Z",
-     "start_time": "2025-05-24T12:05:58.498542Z"
+     "end_time": "2025-05-24T12:36:31.332201Z",
+     "start_time": "2025-05-24T12:36:31.153694Z"
     }
    },
    "source": [
     "data, labels, exp_ids = get_welding_data(data_path)"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 38
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-24T12:06:01.772666Z",
-     "start_time": "2025-05-24T12:05:59.214829Z"
+     "end_time": "2025-05-24T12:36:32.787464Z",
+     "start_time": "2025-05-24T12:36:31.369368Z"
     }
    },
    "source": [
-    "# Klassenverteilung\n",
+    "# Class Distribution\n",
     "class_counts = pd.Series(labels).value_counts().sort_index()\n",
     "print(\"Class distribution:\\n\", class_counts)\n",
     "\n",
-    "# Pro Experiment\n",
+    "# Count samples Experiment\n",
     "experiment_counts = pd.Series(exp_ids).value_counts().sort_index()\n",
     "print(\"\\nSamples per experiment:\\n\", experiment_counts)\n",
     "\n",
-    "# Annahme: features = (n_samples, n_features)\n",
-    "# Extrahiere Spannung (V) und Strom (I) - hier beispielhaft für alternierende V/I-Spalten\n",
+    "# Determine min max vlaues\n",
     "voltage_cols = np.arange(0, data.shape[1], 2)\n",
     "current_cols = np.arange(1, data.shape[1], 2)\n",
     "\n",
@@ -132,7 +131,7 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 39
   },
   {
    "cell_type": "markdown",
@@ -152,29 +151,54 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-24T12:06:02.180222Z",
-     "start_time": "2025-05-24T12:06:01.862273Z"
+     "end_time": "2025-05-24T12:36:33.017214Z",
+     "start_time": "2025-05-24T12:36:32.804481Z"
     }
    },
    "source": [
-    "data, labels, exp_ids = get_welding_data(data_path, n_samples=10_000)\n",
+    "data, labels, exp_ids = get_welding_data(data_path, n_samples=10)\n",
     "\n",
     "save_path =  plot_path / \"voltage_current_distribution\""
    ],
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 40
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-24T12:06:02.212832Z",
-     "start_time": "2025-05-24T12:06:02.211130Z"
+     "end_time": "2025-05-24T12:36:33.276506Z",
+     "start_time": "2025-05-24T12:36:33.041415Z"
     }
    },
-   "source": [],
+   "source": [
+    "# Select voltage and current columns\n",
+    "voltage_cols = np.arange(0, data.shape[1], 2)\n",
+    "current_cols = np.arange(1, data.shape[1], 2)\n",
+    "\n",
+    "voltages = data[:, voltage_cols].flatten()\n",
+    "currents = data[:, current_cols].flatten()\n",
+    "\n",
+    "# Create a DataFrame for plotting\n",
+    "df_plot = pd.DataFrame({\n",
+    "    \"Voltage\": voltages,\n",
+    "    \"Current\": currents\n",
+    "})\n",
+    "\n",
+    "# Melt the DataFrame to long format for Plotly\n",
+    "df_melted = df_plot.melt(var_name='Measurement Type', value_name='Value')\n",
+    "\n",
+    "# Create boxplot\n",
+    "fig = px.box(df_melted, x='Measurement Type', y='Value', points='all', title=\"Voltage and Current Distributions\")\n",
+    "\n",
+    "# Show interactive plot\n",
+    "plot(fig)\n",
+    "\n",
+    "# Save to HTML\n",
+    "save_plotly_figure_as_html(fig, save_path)\n"
+   ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 41
   },
   {
    "cell_type": "markdown",
@@ -193,8 +217,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-24T12:06:02.429041Z",
-     "start_time": "2025-05-24T12:06:02.285969Z"
+     "end_time": "2025-05-24T12:36:33.518730Z",
+     "start_time": "2025-05-24T12:36:33.301898Z"
     }
    },
    "source": [
@@ -203,19 +227,31 @@
     "save_path = plot_path / \"welding_sample.png\"    "
    ],
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 42
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-24T12:06:02.445666Z",
-     "start_time": "2025-05-24T12:06:02.444035Z"
+     "end_time": "2025-05-24T12:36:33.867354Z",
+     "start_time": "2025-05-24T12:36:33.547066Z"
     }
    },
-   "source": [],
-   "outputs": [],
-   "execution_count": null
+   "source": "",
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'n_plots' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[43], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m fig, axes \u001B[38;5;241m=\u001B[39m plt\u001B[38;5;241m.\u001B[39msubplots(\u001B[43mn_plots\u001B[49m, \u001B[38;5;241m1\u001B[39m, figsize\u001B[38;5;241m=\u001B[39m(\u001B[38;5;241m12\u001B[39m, \u001B[38;5;241m3\u001B[39m \u001B[38;5;241m*\u001B[39m n_plots), sharex\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m n_plots \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m1\u001B[39m:\n\u001B[1;32m      4\u001B[0m     axes \u001B[38;5;241m=\u001B[39m [axes]  \u001B[38;5;66;03m# ensure iterable\u001B[39;00m\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'n_plots' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 43
   },
   {
    "cell_type": "markdown",
@@ -236,8 +272,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-24T12:06:02.847837Z",
-     "start_time": "2025-05-24T12:06:02.499029Z"
+     "end_time": "2025-05-24T12:36:33.871620606Z",
+     "start_time": "2025-05-24T12:29:53.725640Z"
     }
    },
    "source": [
@@ -268,13 +304,13 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[7], line 17\u001B[0m\n\u001B[1;32m     13\u001B[0m     \u001B[38;5;28;01mpass\u001B[39;00m\n\u001B[1;32m     16\u001B[0m fig \u001B[38;5;241m=\u001B[39m create_plotly_plot(data, labels, exp_ids)\n\u001B[0;32m---> 17\u001B[0m \u001B[43msave_plotly_figure_as_html\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfig\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mplot_path\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m/\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mwelding_samples\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m     18\u001B[0m fig\u001B[38;5;241m.\u001B[39mshow()\n",
+      "Cell \u001B[0;32mIn[18], line 17\u001B[0m\n\u001B[1;32m     13\u001B[0m     \u001B[38;5;28;01mpass\u001B[39;00m\n\u001B[1;32m     16\u001B[0m fig \u001B[38;5;241m=\u001B[39m create_plotly_plot(data, labels, exp_ids)\n\u001B[0;32m---> 17\u001B[0m \u001B[43msave_plotly_figure_as_html\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfig\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mplot_path\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m/\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mwelding_samples\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m     18\u001B[0m fig\u001B[38;5;241m.\u001B[39mshow()\n",
       "File \u001B[0;32m~/Uni/Informatik/AML (Applied Machine Learning)/Code/utils.py:24\u001B[0m, in \u001B[0;36msave_plotly_figure_as_html\u001B[0;34m(fig, filename_path)\u001B[0m\n\u001B[1;32m     21\u001B[0m     filename_path \u001B[38;5;241m=\u001B[39m filename_path\u001B[38;5;241m.\u001B[39mwith_suffix(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m.html\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m     23\u001B[0m \u001B[38;5;66;03m# Save the figure\u001B[39;00m\n\u001B[0;32m---> 24\u001B[0m \u001B[43mfig\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mwrite_html\u001B[49m(filename_path)\n",
       "\u001B[0;31mAttributeError\u001B[0m: 'NoneType' object has no attribute 'write_html'"
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 18
   },
   {
    "cell_type": "markdown",
