--- a/ex_04_clustering.ipynb
+++ b/ex_04_clustering.ipynb
@@ -56,23 +56,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-26T13:41:58.147613Z",
+     "start_time": "2025-05-26T13:41:58.143697Z"
+    }
+   },
    "source": [
     "def elbow_method(X, max_clusters=10, distance_metric=\"euclidean\"):\n",
     "    \"\"\"\n",
     "    Apply the elbow method to find the optimal number of clusters.\n",
-    "    \n",
-    "    Args:\n",
-    "        X: Feature matrix (scaled)\n",
-    "        max_clusters: Maximum number of clusters to try\n",
-    "        distance_metric: Distance metric to use\n",
-    "    \"\"\"\n",
-    "    pass\n",
     "\n",
-    "elbow_method(data)"
-   ]
+    "    Args:\n",
+    "        X (np.ndarray): Feature matrix (unscaled or scaled)\n",
+    "        max_clusters (int): Max number of clusters to evaluate\n",
+    "        distance_metric (str): Distance metric used in MyKMeans\n",
+    "    \"\"\"\n",
+    "    distortions = []\n",
+    "\n",
+    "    # Normiere die Daten für stabilere Ergebnisse\n",
+    "    scaler = MinMaxScaler()\n",
+    "    X_scaled = scaler.fit_transform(X.reshape(X.shape[0], -1))  # flatten time series per sample\n",
+    "\n",
+    "    for k in range(1, max_clusters + 1):\n",
+    "        kmeans = MyKMeans(n_clusters=k, distance_metric=distance_metric)\n",
+    "        kmeans.fit(X_scaled)\n",
+    "        distortions.append(kmeans.inertia_)\n",
+    "\n",
+    "    # Plot erzeugen\n",
+    "    plt.figure(figsize=(8, 5))\n",
+    "    plt.plot(range(1, max_clusters + 1), distortions, marker='o', linestyle='-')\n",
+    "    plt.title(\"Elbow Method for Optimal k\")\n",
+    "    plt.xlabel(\"Number of Clusters (k)\")\n",
+    "    plt.ylabel(\"Distortion (Inertia)\")\n",
+    "    plt.xticks(range(1, max_clusters + 1))\n",
+    "    plt.grid(True)\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(plot_path / \"elbow_method.png\")\n",
+    "    plt.show()\n"
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -96,7 +120,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": ""
   },
   {
    "cell_type": "markdown",
@@ -140,13 +164,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-26T13:44:32.261700Z",
+     "start_time": "2025-05-26T13:44:32.234678Z"
+    }
+   },
    "source": [
-    "# Extract features from the data\n",
-    "features = extract_features(data, labels)"
-   ]
+    "features = extract_features(data, labels)\n",
+    "\n",
+    "X_features = features.drop(columns=[\"label\"]).values\n",
+    "y_labels = features[\"label\"].values\n",
+    "\n",
+    "# 3. Skaliere die Merkmalsdaten\n",
+    "scaler = MinMaxScaler()\n",
+    "X_scaled = scaler.fit_transform(X_features)\n",
+    "\n",
+    "elbow_method(X_scaled)"
+   ],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'extract_features' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[5], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m features \u001B[38;5;241m=\u001B[39m \u001B[43mextract_features\u001B[49m(data, labels)\n\u001B[1;32m      3\u001B[0m X_features \u001B[38;5;241m=\u001B[39m features\u001B[38;5;241m.\u001B[39mdrop(columns\u001B[38;5;241m=\u001B[39m[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mlabel\u001B[39m\u001B[38;5;124m\"\u001B[39m])\u001B[38;5;241m.\u001B[39mvalues\n\u001B[1;32m      4\u001B[0m y_labels \u001B[38;5;241m=\u001B[39m features[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mlabel\u001B[39m\u001B[38;5;124m\"\u001B[39m]\u001B[38;5;241m.\u001B[39mvalues\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'extract_features' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
